--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,12 @@ html, body {
     right: 20% !important;
     left: auto !important;
 }
+
+.img-center {
+    text-align: center;
+    position: absolute;
+    bottom:5%;
+}
 .premiere {
     background-color: white;
     color: black;
@@ -94,15 +100,22 @@ html, body {
     border-bottom: 6px solid white;
     padding-bottom: 5px;
 }
-.artiste {
-    position: absolute;
+.infosartiste {
+     position: absolute;
     top: 35%;
+}
+.artiste {
     font-size: 4em;
     color: white;
     text-align: center;
 }
 .bottom {
     position: relative;
+}
+.icones {
+   /* position: absolute;
+    bottom: 30%;*/
+    text-align: center;
 }
 hr {
     border: 0;
