--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,9 @@ html, body {
     right: 20% !important;
     left: auto !important;
 }
+.playbtn {
+    color: white;
+}
 
 .img-center {
     text-align: center;
@@ -116,6 +119,10 @@ html, body {
    /* position: absolute;
     bottom: 30%;*/
     text-align: center;
+}
+.reseaux {
+    max-width: 100%;
+    max-height: 100%;
 }
 hr {
     border: 0;
