--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,7 @@ html, body {
 .ville {
     font-size: 3.5em;
     font-family: "Gotham-Black";
+    margin-bottom: -0.5em;
     /* padding-top: -1.5em; */
 }
 .salle {
