--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,10 @@ html, body {
     width: 100%;
 
 }
+a, a:link,a:visited,a:hover,a:active {
+    text-decoration: none;
+    color: white;
+}
 #top {
     padding: 0px !important;
 }
@@ -53,6 +57,9 @@ html, body {
     position: absolute;
     bottom:5%;
 }
+.play720p {
+    display: none;
+}
 .premiere {
     background-color: white;
     color: black;
@@ -64,7 +71,9 @@ html, body {
 }
 .willem {
     font-family: "Gotham-Black";
+    
 }
+
 .concert {
     background-color: rgb(241,207,0);
     border-top: 1px solid rgb(0,0,0);
@@ -84,13 +93,15 @@ html, body {
 
 }
 .ville {
-    font-size: 2.5em;
+    margin-top: 0.3em;
+    font-size: 2em;
     font-family: "Gotham-Black";
-    margin-bottom: -0.3em;
-    /* padding-top: -1.5em; */
+    line-height: 0.8em;
+    margin-bottom: 0.2em;
+     /*padding-top: -1.5em; */
 }
 .salle {
-    font-size: 2em;
+    font-size: 1.6em;
     line-height: 0.8em;
     margin-bottom: 0.5em;
     /* margin-top: -1.2em; */
@@ -100,14 +111,14 @@ html, body {
     font-family: "Gotham-Black";
     text-align: right;
     color: white;
-    margin-top: 5px;
+    margin-top: 0.75em;
 }
 .sousligne {
     border-bottom: 6px solid white;
     padding-bottom: 5px;
 }
 .infosartiste {
-     position: absolute;
+    position: absolute;
     top: 50%;
 }
 .artiste {
@@ -115,6 +126,7 @@ html, body {
     font-weight: bold;
     color: white;
     text-align: center;
+    letter-spacing: 0.2em;
 }
 .bottom {
     position: relative;
@@ -134,4 +146,58 @@ hr {
     border-top: 4px solid rgb(255,255,255);
     margin-left: 20%;
     margin-top: 0em;
+}
+
+@media (min-width: 768px) {
+    .willem {    
+        text-align:left;
+        padding-left:0px;
+    }
+    .debut {
+        text-align: right;
+    }
+    .lien_achat {
+        font-size:1.6em;
+        font-family: "Gotham-Medium"
+    }
+    .ville {
+        font-size:3.2em;
+        padding-top: 20px;
+    }
+    .salle {
+        font-size: 2em;
+        padding-bottom:20px;
+    }
+    .infosartiste {
+        top:68%;
+    }
+    .artiste {
+        font-size: 4.5em;
+        padding-bottom: 20px;
+    }
+    .reseaux {
+        max-width: 80%;
+        max-height: 80%;
+    }
+}
+@media (min-width: 992px) {
+    .img-center {
+        top:60%;
+        right:10%;
+    }
+    .play720p {
+        display:block;
+    }
+    .play360p {
+        display:none;
+    }
+    .infosartiste {
+        top:40%;
+    }
+    .artiste {
+        font-size: 3em;
+    }
+    .reseaux {
+        height: 50px;
+    }
 }
